New:  Diagrams KPI, IVLT (pre-images, invertible linear transformations)
New:  Diagram KRI (kernel and range isomorphisms)
New:  Exercise NM.T31 (with solution)
New:  Exercises LT.T30 and LT.T31
Change:  Replaced Definition RR by an informal discussion
Change:  Definition TSVS renamed as Definition SSVS
Change:  Proof Technique D: discussion about definitions as nouns, adjectives
Typo:  Proof of Theorem SLSLC: Doubled text macro in source (Glenna Toomey)
Typo:  Solution S.T30: Corrected bolding on 'Proof' (Glenna Toomey)
Typo:  LaTeX/XML formatting in Solutions RREF.C11, RREF.C13, RREF.C16 (Caden Robinson)
Typo:  LaTeX/XML formatting in Solutions SSLE.M10, LISS.C21, B.C11 (Caden Robinson)
Typo:  Exercise TSS.T20, fixed link to notation (Caden Robinson)
Typo:  Spelling and grammar, Annotated Acronyms VS (Nick Butterfield)


MAJOR SOURCE FORMAT CHANGE
~~~~~~~~~~~~~~~~~~~~~~~~~~

Version 2.99 is the last version that is guaranteed to compile from the
LaTeX sources initiated in December 2003.  Content has all migrated
to an XML format, using a one-off conversion process, custom XML tags
and LaTeX syntax for in-line and displayed mathematics.

Changes to the LaTeX sources subsequent to Version 2.99 are
designed to support the automated conversion to XML and some
new environments (e.g. "introduction", "para", "graphics") are
not implemented in the corresponding style files.  Additional
content has been integrated, such as Tikz graphics and the Sage
vignettes.

v2.99 source (as published, or with additions) may be recreated
in two ways:
(a) rolling back to the version "2.99" Mercurial tag (published version)
(b) in the new "latex" subdirectory (source with additions).


v2.99 2012/10/13
~~~~~~~~~~~~~
Omission:  Corrected discussion of inner product definition (Diego Barreiro)
Typo:  Set S is really T, discussion following Theorem BCS (Diego Barreiro)
Typo:  Miscellaneous small corrections, Sections MM, MISLE, VS, S (Diego Barreiro)