@@ -403,305 +403,6 @@ m, n, r
 </sageadvice>
 </subsection>
 
-<subsection acro="DS">
-<title>Direct Sums</title>
-
-<p>Some of the more advanced ideas in linear algebra are closely related to decomposing (<acroref type="technique" acro="DC" />) vector spaces into direct sums of subspaces.  With our previous results about bases and dimension, now is the right time to state and collect a few results about direct sums, though we will only mention these results in passing until we get to <acroref type="section" acro="NLT" />, where they will get a heavy workout.</p>
-
-<p>A direct sum is a short-hand way to describe the relationship between a vector space and two, or more, of its subspaces.  As we will use it, it is not a way to construct new vector spaces from others.</p>
-
-<definition acro="DS" index="direct sum">
-<title>Direct Sum</title>
-<p>Suppose that $V$ is a vector space with two subspaces $U$ and $W$ such that
-for every $\vect{v}\in V$,
-<ol><li>  There exists vectors $\vect{u}\in U$, $\vect{w}\in W$ such that $\vect{v}=\vect{u}+\vect{w}$
-</li><li> If $\vect{v}=\vect{u}_1+\vect{w}_1$ and $\vect{v}=\vect{u}_2+\vect{w}_2$ where $\vect{u}_1,\,\vect{u}_2\in U$, $\vect{w}_1,\,\vect{w}_2\in W$ then $\vect{u}_1=\vect{u}_2$ and $\vect{w}_1=\vect{w}_2$.
-</li></ol>
-</p>
-
-<p>Then $V$ is the <define>direct sum</define> of $U$ and $W$ and we write $V=U\ds W$.</p>
-
-<notation acro="DS" index="direct sum">
-<title>Direct Sum</title>
-<usage>$V=U\ds W$</usage>
-</notation>
-</definition>
-
-<p>Informally, when we say $V$ is the direct sum of the subspaces $U$ and $W$, we are saying that each vector of $V$ can always be expressed as the sum of a vector from $U$ and a vector from $W$, and this expression can only be accomplished in one way (<ie /> uniquely).  This statement should begin to feel something like our definitions of nonsingular matrices (<acroref type="definition" acro="NM" />) and linear independence (<acroref type="definition" acro="LI" />).   It should not be hard to imagine the natural extension of this definition to the case of more than two subspaces.  Could you provide a careful definition of  $V=U_1\ds U_2\ds U_3\ds \dots\ds U_m$ (<acroref type="exercise" acro="PD.M50" />)?</p>
-
-<example acro="SDS" index="direct sum">
-<title>Simple direct sum</title>
-
-<p>In $\complex{3}$, define
-<alignmath>
-<![CDATA[\vect{v}_1&=\colvector{3\\2\\5}]]>
-<![CDATA[&]]>
-<![CDATA[\vect{v}_2&=\colvector{-1\\2\\1}]]>
-<![CDATA[&]]>
-<![CDATA[\vect{v}_3&=\colvector{2\\1\\-2}]]>
-</alignmath>
-Then $\complex{3}=\spn{\set{\vect{v}_1,\,\vect{v}_2}}\ds\spn{\set{\vect{v}_3}}$.  This statement derives from the fact that $B=\set{\vect{v}_1,\,\vect{v}_2,\,\vect{v}_3}$ is basis for $\complex{3}$.  The spanning property of $B$ yields the decomposition of any vector into a sum of vectors from the two subspaces, and the linear independence of $B$ yields the uniqueness of the decomposition.  We will illustrate these claims with a numerical example.</p>
-
-<p>Choose $\vect{v}=\colvector{10\\1\\6}$.  Then
-<alignmath>
-\vect{v}
-<![CDATA[&=2\vect{v}_1+(-2)\vect{v}_2+1\vect{v}_3]]>
-=\left(2\vect{v}_1+(-2)\vect{v}_2\right)+\left(1\vect{v}_3\right)
-</alignmath>
-where we have added parentheses for emphasis.  Obviously $1\vect{v_3}\in\spn{\set{\vect{v}_3}}$, while $2\vect{v}_1+(-2)\vect{v}_2\in\spn{\set{\vect{v}_1,\,\vect{v}_2}}$.  <acroref type="theorem" acro="VRRB" /> provides the uniqueness of the scalars in these linear combinations.</p>
-
-</example>
-
-<p><acroref type="example" acro="SDS" /> is easy to generalize into a theorem.</p>
-
-<theorem acro="DSFB" index="direct sum!from a basis">
-<title>Direct Sum From a Basis</title>
-<statement>
-<p>Suppose that $V$ is a vector space with a basis
-$B=\set{\vect{v}_1,\,\vect{v}_2,\,\vect{v}_3,\,\dots,\,\vect{v}_n}$ and $m\leq n$.  Define
-<alignmath>
-<![CDATA[U&=\spn{\set{\vect{v}_1,\,\vect{v}_2,\,\vect{v}_3,\,\dots,\,\vect{v}_m}}]]>
-<![CDATA[&]]>
-<![CDATA[W&=\spn{\set{\vect{v}_{m+1},\,\vect{v}_{m+2},\,\vect{v}_{m+3},\,\dots,\,\vect{v}_n}}]]>
-</alignmath>
-</p>
-
-<p>Then $V=U\ds W$.</p>
-
-</statement>
-
-<proof>
-<p>Choose any vector $\vect{v}\in V$.  Then by <acroref type="theorem" acro="VRRB" /> there are unique scalars, $\scalarlist{a}{n}$ such that
-<alignmath>
-\vect{v}
-<![CDATA[&=\lincombo{a}{v}{n}\\]]>
-<![CDATA[&=\left(a_1\vect{v}_1+a_2\vect{v}_2+a_3\vect{v}_3+\dots+a_m\vect{v}_m\right)+\\]]>
-<![CDATA[&\quad\quad\left(a_{m+1}\vect{v}_{m+1}+a_{m+2}\vect{v}_{m+2}+a_{m+3}\vect{v}_{m+3}+\dots+a_n\vect{v}_n\right)\\]]>
-<![CDATA[&=\vect{u}+\vect{w}]]>
-</alignmath>
-where we have implicitly defined $\vect{u}$ and $\vect{w}$ in the last line.  It should be clear that $\vect{u}\in{U}$, and similarly, $\vect{w}\in{W}$ (and not simply by the choice of their names).</p>
-
-<p>Suppose we had another decomposition of $\vect{v}$, say $\vect{v}=\vect{u}^\ast+\vect{w}^\ast$.  Then we could write $\vect{u}^\ast$ as a linear combination of $\vect{v}_1$ through $\vect{v}_m$, say using scalars $\scalarlist{b}{m}$.  And we could write $\vect{w}^\ast$ as a linear combination of $\vect{v}_{m+1}$ through $\vect{v}_n$, say using scalars $\scalarlist{c}{n-m}$.  These two collections of scalars would then together give a linear combination of $\vect{v}_1$ through $\vect{v}_n$  that  equals $\vect{v}$.  By the uniqueness of $\scalarlist{a}{n}$, $a_i=b_i$ for $1\leq i\leq m$ and $a_{m+i}=c_{i}$ for $1\leq i\leq n-m$.  From the equality of these scalars we conclude that $\vect{u}=\vect{u}^\ast$ and $\vect{w}=\vect{w}^\ast$.  So with both conditions of <acroref type="definition" acro="DS" /> fulfilled we see that $V=U\ds W$.</p>
-
-</proof>
-</theorem>
-
-<p>Given one subspace of a vector space, we can always find another subspace that will pair with the first to form a direct sum.  The main idea of this theorem, and its proof, is the idea of extending a linearly independent subset into a basis with repeated applications of <acroref type="theorem" acro="ELIS" />.</p>
-
-<theorem acro="DSFOS" index="direct sum!from one subspace">
-<title>Direct Sum From One Subspace</title>
-<statement>
-<p>Suppose that $U$ is a subspace of the vector space $V$.  Then there exists a subspace $W$ of $V$ such that $V=U\ds W$.</p>
-
-</statement>
-
-<!--  David Braithwaite suggest firming up the "eventually" - cite finite dimension, principally -->
-<proof>
-<p>If $U=V$, then choose $W=\set{\zerovector}$.  Otherwise, choose a basis $B=\set{\vectorlist{v}{m}}$ for $U$.  Then since $B$ is a linearly independent set, <acroref type="theorem" acro="ELIS" /> tells us there is a vector $\vect{v}_{m+1}$ in $V$, but not in $U$, such that $B\cup\set{\vect{v}_{m+1}}$ is linearly independent.  Define the subspace $U_1=\spn{B\cup\set{\vect{v}_{m+1}}}$.</p>
-
-<p>We can repeat this procedure, in the case were $U_1\neq V$, creating a new vector $\vect{v}_{m+2}$ in $V$, but not in $U_1$, and a new subspace $U_2=\spn{B\cup\set{\vect{v}_{m+1},\,\vect{v}_{m+2}}}$.  If we continue repeating this procedure, eventually, $U_k=V$ for some $k$, and we can no longer apply <acroref type="theorem" acro="ELIS" />.  No matter, in this case $B\cup\set{\vect{v}_{m+1},\,\vect{v}_{m+2},\,\dots,\,\vect{v}_{m+k}}$ is a linearly independent set that spans $V$, <ie /> a basis for $V$.</p>
-
-<p>Define $W=\spn{\set{\vect{v}_{m+1},\,\vect{v}_{m+2},\,\dots,\,\vect{v}_{m+k}}}$.  We now are exactly in position to apply <acroref type="theorem" acro="DSFB" /> and see that $V=U\ds W$.</p>
-
-</proof>
-</theorem>
-
-<p>There are several different ways to define a direct sum.  Our next two theorems give equivalences (<acroref type="technique" acro="E" />) for direct sums, and therefore could have been employed as definitions.  The first should further cement the notion that a direct sum has some connection with linear independence.</p>
-
-<theorem acro="DSZV" index="direct sum!decomposing zero vector">
-<title>Direct Sums and Zero Vectors</title>
-<statement>
-<p>Suppose $U$ and $W$ are subspaces of the vector space $V$.  Then $V=U\ds W$ if and only if
-<ol><li>  For every $\vect{v}\in V$, there exists vectors $\vect{u}\in U$, $\vect{w}\in W$ such that $\vect{v}=\vect{u}+\vect{w}$.
-</li><li> Whenever $\zerovector=\vect{u}+\vect{w}$ with $\vect{u}\in U$, $\vect{w}\in W$ then $\vect{u}=\vect{w}=\zerovector$.
-</li></ol>
-</p>
-
-</statement>
-
-<proof>
-<p>The first condition is identical in the definition and the theorem, so we only need to establish the equivalence of the second conditions.</p>
-
-<p><implyforward />
-Assume that $V=U\ds W$, according to <acroref type="definition" acro="DS" />.   By <acroref type="property" acro="Z" />, $\zerovector\in V$ and $\zerovector=\zerovector+\zerovector$.  If we also assume that $\zerovector=\vect{u}+\vect{w}$, then the uniqueness of the decomposition gives $\vect{u}=\zerovector$ and $\vect{w}=\zerovector$.</p>
-
-<p><implyreverse />
-Suppose that $\vect{v}\in V$, $\vect{v}=\vect{u}_1+\vect{w}_1$ and $\vect{v}=\vect{u}_2+\vect{w}_2$ where $\vect{u}_1,\,\vect{u}_2\in U$, $\vect{w}_1,\,\vect{w}_2\in W$.  Then
-<alignmath>
-\zerovector
-<![CDATA[&=\vect{v}-\vect{v}&&]]>\text{<acroref type="property" acro="AI" />}\\
-<![CDATA[&=\left(\vect{u}_1+\vect{w}_1\right)-\left(\vect{u}_2+\vect{w}_2\right)\\]]>
-<![CDATA[&=\left(\vect{u}_1-\vect{u}_2\right)+\left(\vect{w}_1-\vect{w}_2\right)&&]]>\text{<acroref type="property" acro="AA" />}
-</alignmath>
-</p>
-
-<p>By <acroref type="property" acro="AC" />, $\vect{u}_1-\vect{u}_2\in U$ and $\vect{w}_1-\vect{w}_2\in W$.  We can now apply our hypothesis, the second statement of the theorem, to conclude that
-<alignmath>
-<![CDATA[\vect{u}_1-\vect{u}_2&=\zerovector & \vect{w}_1-\vect{w}_2&=\zerovector\\]]>
-<![CDATA[\vect{u}_1&=\vect{u}_2 & \vect{w}_1&=\vect{w}_2\\]]>
-</alignmath>
-which establishes the uniqueness needed for the second condition of the definition.
-</p>
-
-</proof>
-</theorem>
-
-<p>Our second equivalence lends further credence to calling a direct sum a decomposition.  The two subspaces of a direct sum have no (nontrivial) elements in common.</p>
-
-<theorem acro="DSZI" index="direct sum!zero intersection">
-<title>Direct Sums and Zero Intersection</title>
-<statement>
-<p>Suppose $U$ and $W$ are subspaces of the vector space $V$.  Then $V=U\ds W$ if and only if
-<ol><li>  For every $\vect{v}\in V$, there exists vectors $\vect{u}\in U$, $\vect{w}\in W$ such that $\vect{v}=\vect{u}+\vect{w}$.
-</li><li> $U\cap W=\set{\zerovector}$.
-</li></ol>
-</p>
-
-</statement>
-
-<proof>
-<p>The first condition is identical in the definition and the theorem, so we only need to establish the equivalence of the second conditions.</p>
-
-<p><implyforward />
-Assume that $V=U\ds W$, according to <acroref type="definition" acro="DS" />.   By <acroref type="property" acro="Z" /> and <acroref type="definition" acro="SI" />, $\set{\zerovector}\subseteq U\cap W$.  To establish the opposite inclusion, suppose that $\vect{x}\in U\cap W$.  Then, since $\vect{x}$ is an element of both $U$ and $W$, we can write two decompositions of $\vect{x}$ as a vector from $U$ plus a vector from $W$,
-<alignmath>
-<![CDATA[\vect{x}&=\vect{x}+\zerovector]]>
-<![CDATA[&]]>
-<![CDATA[\vect{x}&=\zerovector+\vect{x}]]>
-</alignmath>
-</p>
-
-<p>
-By the uniqueness of the decomposition, we see (twice) that $\vect{x}=\zerovector$ and $U\cap W\subseteq\set{\zerovector}$.  Applying <acroref type="definition" acro="SE" />, we have $U\cap W=\set{\zerovector}$.</p>
-
-<p><implyreverse />
-Assume that $U\cap W=\set{\zerovector}$.  And assume further that $\vect{v}\in V$ is such that  $\vect{v}=\vect{u}_1+\vect{w}_1$ and $\vect{v}=\vect{u}_2+\vect{w}_2$ where $\vect{u}_1,\,\vect{u}_2\in U$, $\vect{w}_1,\,\vect{w}_2\in W$.  Define $\vect{x}=\vect{u}_1-\vect{u}_2$.  then by <acroref type="property" acro="AC" />, $\vect{x}\in U$.  Also
-<alignmath>
-\vect{x}
-<![CDATA[&=\vect{u}_1-\vect{u}_2\\]]>
-<![CDATA[&=\left(\vect{v}-\vect{w}_1\right)-\left(\vect{v}-\vect{w}_2\right)\\]]>
-<![CDATA[&=\left(\vect{v}-\vect{v}\right)-\left(\vect{w}_1-\vect{w}_2\right)\\]]>
-<![CDATA[&=\vect{w}_2-\vect{w}_1]]>
-</alignmath>
-</p>
-
-<p>So $\vect{x}\in W$ by <acroref type="property" acro="AC" />.  Thus, $\vect{x}\in U\cap W =\set{\zerovector}$ (<acroref type="definition" acro="SI" />).  So $\vect{x}=\zerovector$ and
-<alignmath>
-<![CDATA[\vect{u}_1-\vect{u}_2&=\zerovector & \vect{w}_2-\vect{w}_1 = \zerovector\\]]>
-<![CDATA[\vect{u}_1&=\vect{u}_2 & \vect{w}_2&=\vect{w}_1\\]]>
-</alignmath>
-yielding the desired uniqueness of the second condition of the definition.</p>
-
-</proof>
-</theorem>
-
-<p>If the statement of <acroref type="theorem" acro="DSZV" /> did not remind you of linear independence, the next theorem should establish the connection.</p>
-
-<theorem acro="DSLI" index="direct sums!linear independence">
-<title>Direct Sums and Linear Independence</title>
-<statement>
-<p>Suppose $U$ and $W$ are subspaces of the vector space $V$ with $V=U\ds W$.  Suppose that $R$ is a linearly independent subset of $U$ and $S$ is a linearly independent subset of $W$.  Then $R\cup S$ is a linearly independent subset of $V$.</p>
-
-</statement>
-
-<proof>
-<p>Let $R=\set{\vectorlist{u}{k}}$ and $S=\set{\vectorlist{w}{\ell}}$.  Begin with a relation of linear dependence (<acroref type="definition" acro="RLD" />) on the set $R\cup S$ using scalars $\scalarlist{a}{k}$ and $\scalarlist{b}{\ell}$.  Then,
-<alignmath>
-\zerovector
-<![CDATA[&=]]>
-\lincombo{a}{u}{k}
-+
-\lincombo{b}{w}{\ell}\\
-<![CDATA[&=]]>
-\left(\lincombo{a}{u}{k}\right)
-+
-\left(\lincombo{b}{w}{\ell}\right)\\
-<![CDATA[&=\vect{u}+\vect{w}]]>
-</alignmath>
-where we have made an implicit definition of the vectors $\vect{u}\in U$, $\vect{w}\in W$.</p>
-
-<p>Applying <acroref type="theorem" acro="DSZV" /> we conclude that
-<alignmath>
-<![CDATA[\vect{u}&=\lincombo{a}{u}{k}=\zerovector\\]]>
-<![CDATA[\vect{w}&=\lincombo{b}{w}{\ell}=\zerovector]]>
-</alignmath>
-</p>
-
-<p>Now the linear independence of $R$ and $S$ (individually) yields
-<alignmath>
-<![CDATA[a_1&=a_2=a_3=\cdots=a_k=0]]>
-<![CDATA[&]]>
-<![CDATA[b_1&=b_2=b_3=\cdots=b_\ell=0]]>
-</alignmath>
-</p>
-
-<p>Forced to acknowledge that only a trivial linear combination yields the zero vector, <acroref type="definition" acro="LI" /> says the set $R\cup S$ is linearly independent in $V$.</p>
-
-</proof>
-</theorem>
-
-<p>Our last theorem in this collection will go some ways towards explaining the word <q>sum</q> in the moniker <q>direct sum,</q>  while also partially explaining why these results appear in a section devoted to a discussion of dimension.</p>
-
-<theorem acro="DSD" index="direct sum!dimension">
-<title>Direct Sums and Dimension</title>
-<statement>
-<p>Suppose $U$ and $W$ are subspaces of the vector space $V$ with $V=U\ds W$.  Then $\dimension{V}=\dimension{U}+\dimension{W}$.</p>
-
-</statement>
-
-<proof>
-<p>We will establish this equality of positive integers with two inequalities.  We will need a basis of $U$ (call it $B$) and a basis of $W$ (call it $C$).</p>
-
-<p>First,  note that $B$ and $C$ have sizes equal to the dimensions of the respective subspaces.  The union of these two linearly independent sets, $B\cup C$ will be linearly independent in $V$ by <acroref type="theorem" acro="DSLI" />.  Further, the two bases have no vectors in common by <acroref type="theorem" acro="DSZI" />, since $B\cap C\subseteq\set{\zerovector}$ and the zero vector is never an element of a linearly independent set (<acroref type="exercise" acro="LI.T10" />).  So the size of the union is exactly the sum of the dimensions of $U$ and $W$.  By <acroref type="theorem" acro="G" /> the size  of $B\cup C$ cannot exceed the dimension of $V$ without being linearly dependent.  These observations give us $\dimension{U}+\dimension{W}\leq\dimension{V}$.</p>
-
-<p>Grab any vector $\vect{v}\in V$.  Then by <acroref type="theorem" acro="DSZI" /> we can write $\vect{v}=\vect{u}+\vect{w}$ with $\vect{u}\in U$ and $\vect{w}\in W$.  Individually, we can write $\vect{u}$ as a linear combination of the basis elements in $B$, and similarly, we can write $\vect{w}$ as a linear combination of the basis elements in $C$, since the bases are spanning sets for their respective subspaces.  These two sets of scalars will provide a linear combination of all of the vectors in $B\cup C$ which will equal $\vect{v}$.  The upshot of this is that $B\cup C$ is a spanning set for $V$.  By <acroref type="theorem" acro="G" />, the size of $B\cup C$ cannot be smaller than the dimension of $V$ without failing to span $V$.  These observations give us $\dimension{U}+\dimension{W}\geq\dimension{V}$.</p>
-
-</proof>
-</theorem>
-
-<p>There is a certain appealling symmetry in the previous proof, where both linear independence and spanning properties of the bases are used, both of the first two conclusions of <acroref type="theorem" acro="G" /> are employed, and we have quoted both of the two conditions of <acroref type="theorem" acro="DSZI" />.</p>
-
-<p>One final theorem tells us that we can successively decompose direct sums into sums of smaller and smaller subspaces.</p>
-
-<theorem acro="RDS" index="direct sums!repeated">
-<title>Repeated Direct Sums</title>
-<statement>
-<p>Suppose $V$ is a vector space with subspaces $U$ and $W$ with $V=U\ds W$.  Suppose that $X$ and $Y$ are subspaces of $W$ with $W=X\ds Y$.  Then $V=U\ds X\ds Y$.</p>
-
-</statement>
-
-<proof>
-<p>Suppose that  $\vect{v}\in V$.  Then due to $V=U\ds W$, there exist vectors $\vect{u}\in U$ and $\vect{w}\in W$ such that $\vect{v}=\vect{u}+\vect{w}$.   Due to $W=X\ds Y$, there exist vectors $\vect{x}\in X$ and $\vect{y}\in Y$ such that $\vect{w}=\vect{x}+\vect{y}$.   All together,
-<alignmath>
-<![CDATA[\vect{v}&=\vect{u}+\vect{w}=\vect{u}+\vect{x}+\vect{y}]]>
-</alignmath>
-which would be the first condition of a definition of a 3-way direct product.</p>
-
-<p>Now consider the uniqueness.  Suppose that
-<alignmath>
-<![CDATA[\vect{v}&=\vect{u}_1+\vect{x}_1+\vect{y}_1]]>
-<![CDATA[&]]>
-<![CDATA[\vect{v}&=\vect{u}_2+\vect{x}_2+\vect{y}_2]]>
-</alignmath></p>
-
-<p>Because $\vect{x}_1+\vect{y}_1\in W$, $\vect{x}_2+\vect{y}_2\in W$, and $V=U\ds W$, we conclude that
-<alignmath>
-<![CDATA[\vect{u}_1&=\vect{u}_2]]>
-<![CDATA[&]]>
-<![CDATA[\vect{x}_1+\vect{y}_1&=\vect{x}_2+\vect{y}_2]]>
-</alignmath></p>
-
-<p>From the second equality, an application of $W=X\ds Y$ yields the conclusions $\vect{x}_1=\vect{x}_2$ and $\vect{y}_1=\vect{y}_2$.  This establishes the uniqueness of the decomposition of $\vect{v}$ into a sum of vectors from $U$, $X$ and $Y$.</p>
-
-</proof>
-</theorem>
-
-<p>Remember that when we write $V=U\ds W$ there always needs to be a <q>superspace,</q> in this case $V$.  The statement $U\ds W$ is meaningless.  Writing $V=U\ds W$ is simply a shorthand for a somewhat complicated relationship between $V$, $U$ and $W$, as described in the two conditions of <acroref type="definition" acro="DS" />, or <acroref type="theorem" acro="DSZV" />, or <acroref type="theorem" acro="DSZI" />.  <acroref type="theorem" acro="DSFB" /> and <acroref type="theorem" acro="DSFOS" /> gives us sure-fire ways to build direct sums, while <acroref type="theorem" acro="DSLI" />,  <acroref type="theorem" acro="DSD" /> and <acroref type="theorem" acro="RDS" /> tell us interesting properties of direct sums.</p>
-
-<p>This subsection has been long on theorems and short on examples.  If we were to use the term <q>lemma</q> we might have chosen to label some of these results as such, since they will be important tools in other proofs, but may not have much interest on their own (see <acroref type="technique" acro="LC" />).  We will be referencing these results heavily in later sections, and will remind you then to come back for a second look.</p>
-
-</subsection>
-
 <!--   End  pd.tex -->
 <readingquestions>
 <ol>
