@@ -8,6 +8,7 @@ New:  Exercises LT.T30 and LT.T31
 Change:  Replaced Definition RR by an informal discussion
 Change:  Definition TSVS renamed as Definition SSVS
 Change:  Proof Technique D: discussion about definitions as nouns, adjectives
+Change:  Subsection PD.DS (Direct Sums) removed, now in second volume
 Typo:  Proof of Theorem SLSLC: Doubled text macro in source (Glenna Toomey)
 Typo:  Solution S.T30: Corrected bolding on 'Proof' (Glenna Toomey)
 Typo:  LaTeX/XML formatting in Solutions RREF.C11, RREF.C13, RREF.C16 (Caden Robinson)
